6723941: Crash in sun.awt.windows.WToolkit.eventLoop()

Reviewed-by: art, ant